# pdf-invoice-automator

./: .gitignore  README.md  index.html  main.js  main.py  package-lock.json  package.json  preload.js  pyproject.toml
backend/: main.py  test_watchdog.py
