[project]
name = "pdf-invoice-automator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gspread>=6.2.1",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
